CRAB-44304: fix otp path resolution